# mini_multi_agent

./: CMakeLists.txt  README.md  package.xml
launch/: mini_multi_agent.launch
msg/: rob_status.msg
src/: node_mini_factory_server.cpp  node_robot_1.cpp  node_robot_2.cpp
srv/: task_srv.srv
