<?xml version="1.0"?>
<package format="2">
  <name>mini_multi_agent</name>
  <version>0.1.0</version>
  <description>mini_multi_agent.</description>

  <maintainer email="llb_feng@163.com">Anil Mahtani</maintainer>


  <author email="llb_feng@163.com">Anil Mahtani</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
</package>
